--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <title>My personal website</title>
   </head>
   <body>
+    <script src="script.js"></script>
       <h1>Hello,World!</h1>
   </body>
 </html>
