--- a/index.html
+++ b/index.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head> 
       <link rel="stylesheet" href="style.css" />
       <title>My personal website</title>
   </head>
   <body>
-    <script src="script.js"></script>
-      <h1>Hello,World!</h1>
+      <script src="script.js"></script>
+      <div class="main">
+        <div class="navbar">
+          <div class="icon">
+            <h2 class="logo">SOS</h2>
+          </div>
+          <div class="menu">
+            <ul>
+              <li><a href="#">HOME</a></li>
+              <li><a href="#">ABOUT</a></li>
+              <li><a href="#">SERVICE</a></li>
+              <li><a href="#">DESIGN</a></li>
+              <li><a href="#">CONTACT</a></li>
+            </ul>
+
+            </ul>
+            </ul>
+          </div>
+          <div class="search">
+            <input class="srch" type="search" name="" placeholder="Type of text">
+            <a href="#"> <button class="btn">search</button></a>
+          </div>
+        
+        </div>
+        <div class="content">
+          <h1>Web Design by<br><span>Sospeter</span> </h1>
+          <p class="par">Hello, world! this is a simple example of a website that i have created<br>i hope you can navigate through it and appreciate my work<br>Thank you.</p>
+        <div class="form">
+          <h2>Login Here</h2>
+          <input type="email" name="email" placeholder="Enter email here">
+          <input type="password" name="" placeholder="Enter Password Here">
+          <button class="btn"><a href="#">Login</a></button>
+          <p class="link">Don't have an account<br>
+          <a href="#">Sign up </a> here</a></p>
+          <p class="liw">Log in with</p>
+          <div class="icon">
+            <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-google"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-skype"></ion-icon></a>
+          </div>
+        </div>
+        </div>
+      </div>
+      <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   </body>
 </html>
